# watermark

./: .gitignore  LICENSE  README.md  auto-imports.d.ts  components.d.ts  package-lock.json  package.json  tsconfig.json
docs/: index.html
docs/assets/: index-353e17c8.css  index-43e05d71.css  index-8ad28bc7.js  index-a9bfd821.js  index-c0334f41.js
src/: App.vue  const.ts  index.html  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: index-6a9bec72.js
src/components/: ColorPicker.vue  TheControl.vue  TheFooter.vue  TheInput.vue  TheMain.vue  TheSwitch.vue
src/composables/: useI18n.ts
src/pages/: index.vue
