[package]
name = "watermark-desktop"
version = "1.0.0"
description = "专业的PDF水印添加工具"
authors = ["您的名字"]
license = "MIT"
repository = ""
default-run = "watermark-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "fs-write-file", "dialog-save", "dialog-open", "fs-read-file", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ] 
